# snarks-dot-product

./: .gitignore  CMakeLists.txt  README.md  dotproduct_r1cs_java.cpp  dotproduct_r1cs_ppzksnark.cpp  dotproduct_r1cs_test.cpp  r1cs_constrain_cointainer.hpp  r1cs_examples.hpp  r1cs_inner_product.cpp  r1cs_inner_product.hpp  run_r1cs_ppzksnark.hpp  run_r1cs_ppzksnark.tcc
